RESOLVED FIXED199360
REGRESSION(r240047): Overflow scrollers on WK1 fail to update their content size when it changes
https://bugs.webkit.org/show_bug.cgi?id=199360
Summary REGRESSION(r240047): Overflow scrollers on WK1 fail to update their content s...
Antti Koivisto
Reported 2019-07-01 05:47:41 PDT
Overflow scrollers on WK1 fail to update their content size when it changes.
Attachments
patch (6.01 KB, patch)
2019-07-01 06:55 PDT, Antti Koivisto
no flags
patch (6.00 KB, patch)
2019-07-01 06:58 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-07-01 05:47:56 PDT
Antti Koivisto
Comment 2 2019-07-01 06:55:17 PDT
Antti Koivisto
Comment 3 2019-07-01 06:58:15 PDT
WebKit Commit Bot
Comment 4 2019-07-01 11:09:33 PDT
Comment on attachment 373231 [details] patch Clearing flags on attachment: 373231 Committed r247012: <https://trac.webkit.org/changeset/247012>
WebKit Commit Bot
Comment 5 2019-07-01 11:09:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.